--- a/GipTerminalInstaller/GipTerminalInstaller.csproj
+++ b/GipTerminalInstaller/GipTerminalInstaller.csproj
@@ -13,5 +13,8 @@
         <PackageReference Include="System.DirectoryServices" Version="5.0.0" />
         <PackageReference Include="System.Security.Principal.Windows" Version="6.0.0-preview.2.21154.6" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Properties" />
+    </ItemGroup>
     <Import Project="..\aShared\aShared.projitems" Label="Shared" />
 </Project>
